--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,7 +20,12 @@ a {
     color-scheme: dark;
   }
   body {
-    color: white;
-    background: black;
+    color: black;
+    background: white;
   }
 }
+
+.resource-form {
+  margin-top: 100px;
+}
+
